--- a/index.html
+++ b/index.html
@@ -710,6 +710,25 @@
         </div>
     </footer>
 
+    <!-- Fixed Navigation Buttons -->
+    <div class="fixed-nav-buttons">
+        <button id="scroll-up" class="nav-btn" aria-label="Scroll to top">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"/>
+            </svg>
+        </button>
+        <button id="scroll-down" class="nav-btn" aria-label="Scroll down">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6z"/>
+            </svg>
+        </button>
+        <button id="menu-toggle" class="nav-btn" aria-label="Toggle menu">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/>
+            </svg>
+        </button>
+    </div>
+
     <script src="./script.js"></script>
 </body>
 </html>
